# FileExplorer

./: README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/filesystem/: explorer.rs
