[package]
name = "file-explorer"
version = "1.0.1"
description = "File Explorer"
authors = ["Conaticus", "ProtogenDelta", "Souvlaki42"]
license = "GPL-2.0"
repository = "https://github.com/souvlaki42/FileExplorer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.2"
walkdir = "2.3.3"
fuzzy-matcher = "*"
rayon = "1.7.0"
dirs = "5.0.1"
notify = "6.0.1"
tokio = { version = "1.28.2", features = ["full"] }
serde_bencode = "0.2.3"
zstd = "0.12.3"
lazy_static = "1.4.0"
open = "5.0.0"
thiserror = "1.0.40"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
